@@ -14,6 +14,7 @@
     * charset fix in make_response
     * some HTTP/0.9 suport fixes
     * JSONGeneratorResponse is defined as extras
+    * OpenAPI tests fix - better openapi example
 
 ==== 2.2.0 ====
     * openapi after_request example fix
